--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <jooq.version>3.10.0</jooq.version>
         <sparkjava.version>2.6.0</sparkjava.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <h2.version>1.4.196</h2.version>
+        <hsqldb.version>2.4.0</hsqldb.version>
     </properties>
 
     <dependencies>
@@ -40,9 +40,9 @@
             <version>${jooq.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -83,7 +83,7 @@
                         </goals>
                         <configuration>
                             <jdbc>
-                                <url>jdbc:h2:mem:;INIT=RUNSCRIPT FROM 'src/main/resources/h2/schema.sql'</url>
+                                <url>jdbc:hsqldb:res:/hsqldb/transfers</url>
                                 <user>sa</user>
                             </jdbc>
                             <generator>
@@ -147,7 +147,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>money-transfers-with-deps-${version}</finalName>
+                    <finalName>money-transfers-with-deps-${project.version}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
