--- a/src/main/resources/hsqldb/transfers.properties
+++ b/src/main/resources/hsqldb/transfers.properties
@@ -1,6 +1,6 @@
 #HSQL Database Engine 2.4.0
-#Tue Oct 17 11:01:02 NOVT 2017
+#Tue Oct 17 12:19:51 NOVT 2017
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
 files_readonly=true
